stylesheets/stylesheet.css
/* FONT SETTINGS */
	@font-face 
	{ 
	  font-family: Trebuchet MS; 
	  font-weight: bold; 
	  src: url('../fonts/trebucbd.ttf');
	}

/* GLOBAL STYLE SETTINGS */
	body 
	{
	  font-size: 1em;
	  line-height: 1.5; 
	  background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
	  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
	  color: #6d6d6d;
	  margin: 0px 0px 0px 25px;
	}
	
	section#main_content
	{
	  width: 620px;
	  min-width:620px;
	  margin: 180px auto auto auto;
	  text-align:justify;
	}

/* HEADER STYLE SETTINGS */
	header#main_header
	{
	  z-index: 5;
	  height: 125px;
	  top:0px;
	  left:0px;
	  width:100%;
	  min-width:1000px;
	  text-align: left;
	  background: #fdfdfd; 
	  background: -moz-linear-gradient(top, #e7e7e7 0%, #fdfdfd 65%, #e7e7e7 85%); 
	  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e7e7e7), color-stop(65%,#fdfdfd), color-stop(85%,#e7e7e7)); 
	  background: -webkit-linear-gradient(top, #e7e7e7 0%, #fdfdfd 65%,#e7e7e7 85%); 
	  background: -o-linear-gradient(top,  #e7e7e7 0%,#fdfdfd 65%,#e7e7e7 85%); 
	  background: -ms-linear-gradient(top, #e7e7e7 0%, #fdfdfd 65%,#e7e7e7 85%); 
	  background: linear-gradient(top,  #e7e7e7 0%,#fdfdfd 65%,#e7e7e7 85%); 
	  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', endColorstr='#e7e7e7',GradientType=0 ); 
	  position: fixed;
	  padding-top: 0;
	  padding-bottom: 5px;
	  -webkit-box-shadow: 0px 0px 40px 20px #e7e7e7;
	  -moz-box-shadow: 0px 0px 40px 20px #e7e7e7;
	  box-shadow: 0px 0px 20px 40px #e7e7e7;
	}

	header#main_header h1 
	{
	  font-family: 'Helvetica Neue', Helvetica, Arial, serif; font-weight: 900;
	  letter-spacing: -1px;
	  font-size: 30px;
	  color: #303030;
	  line-height: 1.2;
	  margin-left:0px;
	}

	header#main_header h2 
	{
	  letter-spacing: -1px;
	  font-size: 24px;
	  color: #aaa;
	  font-weight: normal;
	  margin-top:-20px;
	  margin-bottom: 8px;
	  margin-left:0px;
	  font-variant:normal;
	}

	header#main_header img
	{
		padding-right:15px;
		float:left;
		margin-left:10px;
		margin-top:15px;
	}

	header#main_header nav#main_nav
	{
		border-top: 4px solid #002e5f;
		margin-left:0px;
		margin-top:-10px;
		margin-right:20%;
	}

	header#main_header nav#sub_nav
	{
		z-index:6;
		position: relative;
		margin-right:15%;
		text-decoration:none;
		text-indent:10px;
		padding-right:10px;
		padding-bottom:6px;
	}
	
	header#main_header nav#sub_nav a
	{
		font-family:Trebuchet MS;
		letter-spacing: 1px;
		font-size: 12px;
		color: #888888;
		font-weight: bold;
		padding-right:5px;
		padding-left:0px;
	}

	header#main_header nav#sub_nav a:hover
	{
		text-decoration:none;
		color:#aaa;
	}

	header#main_header hr#sub_nav_hr
	{
		z-index:6;
		position: relative;
		border-top: 4px solid #ee9831;
		background: #e7e7e7;
		margin-right:18%;
		margin-top:0px;
		-webkit-animation:hrExtend 1s ease-in-out;
		-o-animation:hrExtend 1s ease-in-out;
		-moz-animation:hrExtend 1s ease-in-out;
		text-decoration:none;
		text-indent:10px;
		padding-right:10px;
	}

	header#main_header nav ul, footer#main_footer nav ul
	{
	  list-style:none;
	  margin:0;
	  padding:0;
	  white-space:no-wrap;
	}

	header#main_header nav ul li, footer#main_footer nav ul li
	{
	  padding:0;
	  margin: 0 10px 0 0;
	  display:inline;
	  white-space:no-wrap;
          color:#;
	}

	header#main_header nav a
	{
		font-family:Trebuchet MS;
		letter-spacing: 1px;
		font-size: 14px;
		color: #555555;
		font-weight: bold;
		padding-right:15px;
		padding-left:15px;
	}

	header#main_header nav#main_nav a:hover
	{
		text-decoration:none;
		color:#aaa;
		border-top:solid #ee9831;
	}

	header#main_header nav#main_nav .currentPage
	{
		text-decoration:none;
		color:#555555;
		border-top:solid #ee9831;
		padding-bottom:3px;
		background-color:#dddddd;
		-webkit-animation:blockColor 1s; 
		-o-animation:blockColor 1s; 
		-moz-animation:blockColor 1s; 
	}
	
	
/* FOOTER STYLE SETTINGS */
	footer#main_footer
	{
	  width:90%;
	  margin-top: 40px;
	  padding-bottom: 30px;
	  font-size: 13px;
	  color: #aaa;
	  text-align:center;
	}

	footer#main_footer hr, section#main_content hr
  {
		z-index:6;
		position: relative;
		background: #000;
    margin-top:10px;
    margin-bottom:10px;
    padding:1px;
	  background: #aaa; 
	  background: -moz-linear-gradient(left,  #e7e7e7 15%, #aaa 50%, #e7e7e7 85%); 
	  background: -webkit-gradient(linear, left top, left bottom, color-stop(15%,#e7e7e7), color-stop(50%,#aaa), color-stop(85%, #e7e7e7)); 
	  background: -webkit-linear-gradient(left,  #e7e7e7 15%,#aaa 50%, #e7e7e7 85%); 
	  background: -o-linear-gradient(left,  #e7e7e7 15%,#aaa 50%, #e7e7e7 85%); 
	  background: -ms-linear-gradient(left,  #e7e7e7 15%,#aaa 50%, #e7e7e7 85%); 
	  background: linear-gradient(left,  #e7e7e7 15%,#aaa 50%, #e7e7e7 85%); 
  }

	footer a 
	{
	  color: #666;
	}

	footer a:hover 
	{
	  color: #444;
          text-decoration:none;
	}

/*SPECIAL CONTENT-AREA AND CLASS STYLES*/
	article header h2
	{
	  font-size:28px;
	  color:#0a0a0a
	}

	code, pre 
	{
	  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal;
	  color: #222;
	  margin-bottom: 20px;
	  font-size: 14px;
	}

	code 
	{
	  background-color: #f2f2f2;
	  border: solid 1px #ddd;
	  padding-left: 15px;
	  padding-right: 15px;
	  margin-left: 35px;
	}

	pre 
	{
	  padding: 20px;
	  background: #303030;
	  color: #f2f2f2;
	  text-shadow: none;
	  overflow: auto;
	}

	pre code 
	{
	  color: #f2f2f2;
	  background-color: #303030;
	  border: none;
	  padding: 0px;
	}

	.finePrint 
	{
		font-size:8pt;
	}

	.hangingIndent 
	{
		padding-left: 44px ;
		text-indent: -22px ;
	}

a.button {
  -moz-border-radius: 30px;
  -webkit-border-radius: 30px;                     
  border-radius: 30px;
  border-top: solid 3px #999999;
  border-left: solid 3px #999999;
  border-right: solid 3px #999999;
  border-bottom: solid 3px #999999;
  color: #444444;
  line-height: 25px;
  font-weight: bold;
  font-size: 12px;
  font-variant:small-caps;
  padding: 10px 6px 10px 6px;
  display: block;
  float: left;
  width: 165px;
  margin-right: 12px;  
  background: #cccccc;
}

a.button:hover {
  border-top: solid 3px #ee9831;
  border-left: solid 3px #ee9831;
  border-right: solid 3px #ee9831;
  border-bottom: solid 3px #ee9831;
  color: #444444;
  text-decoration: none;
  -webkit-box-shadow: 10px 10px 5px #111;
  -moz-box-shadow: 10px 10px 5px #111;
  box-shadow: 3px 3px 8px #333333;
}

a.button span {
  padding-left: 50px;
  display: block;
  height: 23px;
}

#buttonContainer {
width:100%;
margin-top:70px;
}

#meet-github span {
  background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
}

#join-proj span {
  background: transparent url(../images/join-proj.png) 12px 50% no-repeat;
}

#start-proj span {
  background: transparent url(../images/start-proj.png) 12px 50% no-repeat;
}

/* COMMON STYLES */
	a
	{
	  color: #002e5f;
	  text-decoration:underline;
	}

	a:hover 
	{
	  color: #ee9831;
	  text-decoration:underline;
	}

	hr 
	{
	  height: 0px;
	  margin-top: -10px;
	  border: none;
	  align:center;
	}

	em 
	{
	  font-style: italic;
	}


	th 
	{
	  font-weight: 500;
	}

	td 
	{
	  border: 1px solid #ebebeb;
	  text-align: center; 
	  font-weight: 300;
	}

	form 
	{
	  background: #f2f2f2;
	  padding: 20px;
	}

	ul, ol, dl 
	{
	  margin-bottom: 20px;
	}

	table.figureright 
	{
		margin:5px -100px 5px 15px;
		padding: 5px;
		border: 2px dotted gray;
		font-family:Trebuchet MS;
	}

	table.figureleft 
	{
		margin:5px 15px 5px -100px;
		padding: 5px;
		border: 2px dotted gray;
		font-family:Trebuchet MS;
	}

	th.figure 
	{
		font-size:0.9em;
		color:#666666;
		text-align: center; 
		text-decoration:underline;
	}

	td.figure 
	{
		font-size:0.8em;
		color:#888888;
		text-align: center; 
	}

	h1 
	{
	  font-size: 32px;
	} 

	h2 
	{
	  font-size: 28px;
	  font-weight: bold;
	  color: #666666;
	  margin-bottom: 8px;
	  font-variant:small-caps;
	} 

	h3 
	{
	  color: #333333;
	  font-size: 18px;
	  font-weight: bold;
	  margin-bottom: 8px;
	} 
	 
	h4 
	{
	 font-size: 16px;
	  color: #303030;
	  font-weight: bold;
	  padding-left:10px;
	} 

	h5 
	{
	  font-size: 1em;
	  color: #303030;
	} 

	h6 
	{
	  font-size: .8em;
	  color: #303030;
	} 

	h10 
	{
		position:relative; 
	}

	h10 span 
	{
		position:absolute; 
	  top:-175px;
	}

	p 
	{
	  font-weight: 300;
	  margin-bottom: 20px;
	  padding-left: 20px;
	}
	 
	a 
	{
	  text-decoration: none;
	}

	p a 
	{
	  font-weight: 400;
	}

	blockquote 
	{
	  font-size: 1.6em;
	  border-left: 10px solid #e9e9e9;
	  margin-bottom: 20px;
	  padding: 0 0 0 30px;
	}

	ul li 
	{
	  margin-left: 20px;
	  padding-left: 0px;
	}

	ol li 
	{
	  list-style: decimal outside;
	  padding-left: 0px;
	}

	dl dt 
	{
	  color: #303030;
	}

/*ANIMATIONS*/
	/*Current page gray nav block*/
	@-webkit-keyframes blockColor /* Safari and Chrome */
	{
		0%   {background:#e7e7e7;}
		75%   {background:#e7e7e7;}
		100% {background:#dddddd;}
	}
	@-o-keyframes blockColor /* Opera */
	{
		0%   {background:#e7e7e7;}
		75%   {background:#e7e7e7;}
		100% {background:#dddddd;}
	}
	@-moz-keyframes blockColor /* Mozilla */
	{
		0%   {background:#e7e7e7;}
		75%   {background:#e7e7e7;}
		100% {background:#dddddd;}
	}

	/*Horizontal rule extention and subNav lowering*/
	@-webkit-keyframes hrExtend /* Safari and Chrome */
	{
		0% {margin-top:-7px; margin-right:80%; border-top: 4px solid #ffffff;}
		100% {margin-top:0px; margin-right:18%; border-top: 4px solid #ee9831;}
	}
	@-o-keyframes hrExtend /* Opera */
	{
		0% {margin-top:-7px; margin-right:80%; border-top: 4px solid #ffffff;}
		100% {margin-top:0px; margin-right:18%; border-top: 4px solid #ee9831;}
	}
	@-moz-keyframes hrExtend /* Mozilla */
	{
		0% {margin-top:-7px; margin-right:80%; border-top: 4px solid #ffffff;}
		100% {margin-top:0px; margin-right:18%; border-top: 4px solid #ee9831;}
	}

	/*Animations for buttons*/
	@-webkit-keyframes buttons /* Safari and Chrome */
	{
	}
	@-o-keyframes buttons /* Opera */
	{
	}
	@-moz-keyframes buttons /* Mozilla */
	{
	}

/* MISC */
	.clearfix:after 
	{
	  clear: both;
	  content: '.';
	  display: block;
	  visibility: hidden;
	  height: 0;
	}

	.clearfix {display: inline-block;}
	* html .clearfix {height: 1%;}
	.clearfix {display: block;}

/* #Media Queries
================================================== */

/* Smaller than standard 960 (devices and browsers) */
@media only screen and (max-width: 959px) {}

/* Tablet Portrait size to standard 960 (devices and browsers) */
@media only screen and (min-width: 768px) and (max-width: 959px) {}

/* All Mobile Sizes (devices and browser) */
@media only screen and (max-width: 767px) 
{
  header 
  {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  section 
  {
    width: 94%;
    margin: 0 auto;
  }
}

/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@media only screen and (min-width: 480px) and (max-width: 767px) {}

/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@media only screen and (max-width: 479px) {}



/* Dan's section - for testing */
section#main_content aside
{
  width:35%;
  font-size:20px;
  line-height:22px;
  padding-top:10px;
  padding-left:20px;
  padding-right:20px;
  padding-bottom:130px;
  margin-bottom:20px;
  text-align:justify;
  background:#cccccc;
}

section#main_content aside p
{
  margin-left:10px;
  float:right;
  margin-top:2px; 
  margin-bottom:2px; 
  font-size:16px;
}

section#main_content aside#researchbear_says
{
  float:right;
  background-image:url('../images/researchbear-small.png');
  background-position:left bottom;
  background-repeat:no-repeat;
  background-size:40%;
  margin-left:20px;
}

section#main_content aside#ashamedman_says
{
  float:left;
  background-image:url('../images/ashamedman-small.png');
  background-position:right bottom;
  background-repeat:no-repeat;
  background-size:40%;
  margin-right:20px;
}

video
{
  width:100%;
  margin:10px 0 10px 0;
}

